--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,29 @@
+buildscript {
+    ext.kotlinVersion = '1.1.3'
+    ext.supportVersion = '25.3.1'
+    ext.rxVersion = '2.1.1'
+    ext.retrofit2Version = '2.2.0'
+    ext.okhttpVersion = '3.6.0'
+    ext.daggerVersion = '2.8'
+    ext.gsonVersion = '2.8.1'
+    ext.archVersion = '1.0.0-alpha3'
+
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        //maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        //maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.google.gms:google-services:3.0.0'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 25
@@ -11,20 +36,60 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    productFlavors {
+        mock {
+            applicationIdSuffix = ".mock"
+        }
+        prod {
+
+        }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+
+    compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support.constraint:constraint-layout:1.0.2"
+
+    compile "com.squareup.retrofit2:retrofit:$retrofit2Version"
+    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit2Version"
+    compile "com.squareup.retrofit2:converter-gson:$retrofit2Version"
+
+    compile "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    compile "com.squareup.okhttp3:okhttp-urlconnection:$okhttpVersion"
+    compile "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+
+    compile "com.google.code.gson:gson:$gsonVersion"
+
+    compile "io.reactivex.rxjava2:rxjava:$rxVersion"
+    //compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    compile "com.google.dagger:dagger:${daggerVersion}"
+    kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
+
+    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
+
+    compile "android.arch.lifecycle:extensions:${archVersion}"
+    compile "android.arch.lifecycle:reactivestreams:${archVersion}"
+    compile "android.arch.persistence.room:runtime:${archVersion}"
+    annotationProcessor "android.arch.persistence.room:compiler:${archVersion}"
+    kapt "android.arch.lifecycle:compiler:${archVersion}"
+    kapt "android.arch.persistence.room:compiler:${archVersion}"
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     testCompile 'junit:junit:4.12'
 }
