--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     compile "com.android.support:appcompat-v7:$supportVersion"
-    compile "com.android.support.constraint:constraint-layout:1.0.2"
+    //compile "com.android.support:support-v4:$supportVersion"
 
     compile "com.squareup.retrofit2:retrofit:$retrofit2Version"
     compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit2Version"
@@ -73,16 +73,17 @@ dependencies {
     compile "com.google.code.gson:gson:$gsonVersion"
 
     compile "io.reactivex.rxjava2:rxjava:$rxVersion"
-    //compile "io.reactivex.rxjava2:rxandroid:2.0.1"
+    compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     compile "com.google.dagger:dagger:${daggerVersion}"
     kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
 
-    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
 
     compile "android.arch.lifecycle:extensions:${archVersion}"
     compile "android.arch.lifecycle:reactivestreams:${archVersion}"
     compile "android.arch.persistence.room:runtime:${archVersion}"
+    compile "android.arch.persistence.room:rxjava2:${archVersion}"
+
     annotationProcessor "android.arch.persistence.room:compiler:${archVersion}"
     kapt "android.arch.lifecycle:compiler:${archVersion}"
     kapt "android.arch.persistence.room:compiler:${archVersion}"
@@ -91,5 +92,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
     testCompile 'junit:junit:4.12'
 }
