--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
     defaultConfig {
         applicationId "com.github.op.xchange"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -43,15 +43,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    productFlavors {
-        mock {
-            applicationIdSuffix = ".mock"
-        }
-        prod {
-
-        }
-    }
 }
 
 dependencies {
@@ -60,6 +51,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     compile "com.android.support:appcompat-v7:$supportVersion"
+    //compile 'com.android.support.constraint:constraint-layout:1.0.2'
     //compile "com.android.support:support-v4:$supportVersion"
 
     compile "com.squareup.retrofit2:retrofit:$retrofit2Version"
@@ -72,17 +64,20 @@ dependencies {
 
     compile "com.google.code.gson:gson:$gsonVersion"
 
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+
     compile "io.reactivex.rxjava2:rxjava:$rxVersion"
     compile "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     compile "com.google.dagger:dagger:${daggerVersion}"
     kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
 
-
     compile "android.arch.lifecycle:extensions:${archVersion}"
     compile "android.arch.lifecycle:reactivestreams:${archVersion}"
     compile "android.arch.persistence.room:runtime:${archVersion}"
     compile "android.arch.persistence.room:rxjava2:${archVersion}"
+
+    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
 
     annotationProcessor "android.arch.persistence.room:compiler:${archVersion}"
     kapt "android.arch.lifecycle:compiler:${archVersion}"
@@ -92,8 +87,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-
-    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC2'
     testCompile 'junit:junit:4.12'
 }
