--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlinVersion = '1.1.3'
-    ext.supportVersion = '25.3.1'
+    ext.kotlinVersion = '1.1.51'
+    ext.supportVersion = '25.4.0'
     ext.rxVersion = '2.1.1'
     ext.retrofit2Version = '2.2.0'
     ext.okhttpVersion = '3.6.0'
@@ -16,7 +16,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.1.0'
     }
 }
 
@@ -27,7 +27,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.github.op.xchange"
         minSdkVersion 16
@@ -44,11 +44,15 @@ android {
         }
     }
 
+    flavorDimensions "type"
+
     productFlavors {
         dev {
+            dimension "type"
             applicationIdSuffix ".dev"
         }
         prod {
+            dimension "type"
         }
     }
 }
@@ -81,8 +85,8 @@ dependencies {
     compile "com.google.dagger:dagger:${daggerVersion}"
     kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
 
-    compile "com.jakewharton:butterknife:8.7.0"
-    kapt "com.jakewharton:butterknife-compiler:8.7.0"
+    compile "com.jakewharton:butterknife:8.8.1"
+    kapt "com.jakewharton:butterknife-compiler:8.8.1"
 
     compile "android.arch.lifecycle:extensions:${archVersion}"
     compile "android.arch.lifecycle:reactivestreams:${archVersion}"
